--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
     <div class="container">
         <h1 class="heading">HTML MERN Tasks</h1>
         <ul class="list">
-            <li class="list-item"><a href="task1.html">Task 1 </a></li>
-            <li class="list-item"><a href="task2.html">Task 2 </a></li>
-            <li class="list-item"><a href="task3.html">Task 3 </a></li>
-            <li class="list-item"><a href="task4.html">Task 4 </a></li>
-            <li class="list-item"><a href="task5.html">Task 5 </a></li>
-            <li class="list-item"><a href="task6.html">Task 6 </a></li>
-            <li class="list-item"><a href="task7.html">Task 7 </a></li>
-            <li class="list-item"><a href="task8.html">Task 8 </a></li>
-            <li class="list-item"><a href="task9.html">Task 9 </a></li>
-            <li class="list-item"><a href="task10.html">Task 10 </a></li>
+            <li class="list-item"><a href="Task1.html">Task 1 </a></li>
+            <li class="list-item"><a href="Task2.html">Task 2 </a></li>
+            <li class="list-item"><a href="Task3.html">Task 3 </a></li>
+            <li class="list-item"><a href="Task4.html">Task 4 </a></li>
+            <li class="list-item"><a href="Task5.html">Task 5 </a></li>
+            <li class="list-item"><a href="Task6.html">Task 6 </a></li>
+            <li class="list-item"><a href="Task7.html">Task 7 </a></li>
+            <li class="list-item"><a href="Task8.html">Task 8 </a></li>
+            <li class="list-item"><a href="Task9.html">Task 9 </a></li>
+            <li class="list-item"><a href="Task10.html">Task 10 </a></li>
 
         </ul>
       </div>
